fit_predictor/cvrp_pomo/evaluates/run6/2025-01-25_23-44-26/problem_iter9_response5.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPModel.py", line 8, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\gpt.py", line 24
    random\ufffd\u0176\ufffd = torch.rand(*combined_heuristic.shape) * 0.01
           ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc8 in position 6: invalid continuation byte

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2/problems/cvrp_pomo/eval.py", line 26, in <module>
    from CVRPTester import CVRPTester as Tester
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPTester.py", line 8, in <module>
    from CVRPModel import CVRPModel as Model
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPModel.py", line 10, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\gpt.py", line 24
    random\ufffd\u0176\ufffd = torch.rand(*combined_heuristic.shape) * 0.01
           ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc8 in position 6: invalid continuation byte
